force-app/main/default/objects/Photo_Set_Item__c/Photo_Set_Item__c.object-meta.xml
<CustomObject>
    <label>Photo Set Item</label>
    <nameField>
        <displayFormat>PSI-{00000}</displayFormat>
        <label>Photo Set Item Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Photo Set Items</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>