force-app/main/default/objects/Photo_Set_Item__c/fields/Customer__c.field-meta.xml
<CustomField>
    <fullName>Customer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Customer</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Photo Set Items</relationshipLabel>
    <relationshipName>Photo_Set_Items</relationshipName>
    <type>Lookup</type>
</CustomField>