force-app/main/default/objects/Photo_Set_Item__c/fields/Photo__c.field-meta.xml
<CustomField>
    <fullName>Photo__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Photo</label>
    <referenceTo>Photo__c</referenceTo>
    <relationshipLabel>Photo Set Items</relationshipLabel>
    <relationshipName>Photo_Set_Items</relationshipName>
    <type>Lookup</type>
</CustomField>