force-app/main/default/objects/Photo_Set_Item__c/fields/Photo_Name__c.field-meta.xml
<CustomField>
    <fullName>Photo_Name__c</fullName>
    <formula>Photo__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Photo Name</label>
    <type>Text</type>
</CustomField>