force-app/main/default/objects/Photo_Set_Item__c/fields/Service_Type__c.field-meta.xml
<CustomField>
    <fullName>Service_Type__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Service Type</label>
    <referenceTo>Service_Type__c</referenceTo>
    <relationshipLabel>Photo Set Items</relationshipLabel>
    <relationshipName>Photo_Set_Items</relationshipName>
    <type>Lookup</type>
</CustomField>